--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,13 @@ on: [push]
 jobs:
   scanforstring:
     runs-on: ubuntu-latest
-    name: Scan for Copyright String
+    name: Scan for datetime String
     steps:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Scan Step
       uses: ericwuehler/ScanForStringAction@master
-      id: copyrightscan
+      id: datetimescan
       with:
         codefolders: './'
         fileextensions: '.md,.sh,.py'
@@ -17,4 +17,4 @@ jobs:
         match: 0
         lines: 0
     - name: Get the output
-      run: echo "${{ steps.copyrightscan.outputs.filelist }}"
+      run: echo "${{ steps.datetimescan.outputs.filelist }}"
